<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AVG-SRU</string>
    
    <!-- Menu items -->
    <string name="en_action_create_group">Create group</string>
    <string name="en_action_join_group">Join group</string>
    <string name="en_action_view_groups">View groups</string>
    <string name="en_action_change_group">Change group</string>
    <string name="en_action_edit_profile">Edit profile</string>
    <string name="en_action_view_members">View group members</string>
    
    <!-- Home content -->
    <string name="en_home_btn_playlist">Playlist</string>
    <string name="en_home_edittext_hint">Type message</string>
    <string name="en_home_btn_send">Send</string>
    
    <!-- Playlist content -->
    <string name="en_playlist_title">Playlist</string>
    <string name="en_playlist_add">Add clip</string>
    
    <!-- Search dialog content -->
    <string name="en_searchdialog_hint">Search YouTube</string>
    <string name="en_searchdialog_search">Search</string>
    <string name="en_searchdialog_ok">OK</string>
    
</resources>