<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pda_sru.Playlist"
    android:background="@color/pale_gray"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/searchdialog_edittext_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:hint="@string/en_searchdialog_hint" />
    
    <Button
        android:id="@+id/searchdialog_btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/en_searchdialog_search"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_gravity="center" />
    
    <ListView
        android:id="@+id/searchdialog_listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/searchdialog_btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/en_searchdialog_ok"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_gravity="center" />
    
</LinearLayout>