<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home"
    android:background="@color/dim_gray"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/home_song_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/pale_gray"
        android:textIsSelectable="true" />

    <com.google.android.youtube.player.YouTubePlayerView
      android:id="@+id/home_youtube_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
    
    <Button
        android:id="@+id/home_btn_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/en_home_btn_playlist"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_gravity="center" />
    
    <ListView
        android:id="@+id/home_listview_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pale_gray" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <EditText
            android:id="@+id/home_edittext_message"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:hint="@string/en_home_edittext_hint" />
        
        <Button
            android:id="@+id/home_btn_send_message"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/en_home_btn_send"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
        
    </LinearLayout>

</LinearLayout>